lender/tests/fail/from_iter_invariant.stderr
error[E0582]: binding for associated type `Item` references lifetime `'lend`, which does not appear in the trait input types
  --> tests/fail/from_iter_invariant.rs:20:28
   |
20 |     I: for<'lend> Iterator<Item = &'lend Cell<Option<&'lend String>>>,
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0623]: lifetime mismatch
  --> tests/fail/from_iter_invariant.rs:22:5
   |
22 |     lender::check_covariance!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     these two types are declared with different lifetimes...
   |     ...but data from `lend` flows into `lend` here
   |
   = note: this error originates in the macro `lender::check_covariance` (in Nightly builds, run with -Z macro-backtrace for more info)

error: implementation of `Lending` is not general enough
  --> tests/fail/from_iter_invariant.rs:18:20
   |
18 | impl<I> Lender for InvariantFromIter<I>
   |                    ^^^^^^^^^^^^^^^^^^^^ implementation of `Lending` is not general enough
   |
   = note: `InvariantFromIter<I>` must implement `Lending<'0>`, for any lifetime `'0`...
   = note: ...but it actually implements `Lending<'1>`, for some specific lifetime `'1`

error[E0623]: lifetime mismatch
  --> tests/fail/from_iter_invariant.rs:22:5
   |
22 |     lender::check_covariance!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     these two types are declared with different lifetimes...
   |     ...but data from `lend` flows into `lend` here
   |
   = note: this error originates in the macro `lender::check_covariance` (in Nightly builds, run with -Z macro-backtrace for more info)

error: lifetime may not live long enough
  --> tests/fail/from_iter_invariant.rs:22:5
   |
22 |     lender::check_covariance!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     lifetime `'short` defined here
   |     lifetime `'long` defined here
   |     associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
   = note: this error originates in the macro `lender::check_covariance` (in Nightly builds, run with -Z macro-backtrace for more info)

error: lifetime may not live long enough
  --> tests/fail/from_iter_invariant.rs:37:5
   |
37 |     lender::check_covariance_fallible!();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |     |
   |     lifetime `'short` defined here
   |     lifetime `'long` defined here
   |     associated function was supposed to return data with lifetime `'long` but it is returning data with lifetime `'short`
   |
   = help: consider adding the following bound: `'short: 'long`
   = note: requirement occurs because of the type `Cell<Option<&String>>`, which makes the generic argument `Option<&String>` invariant
   = note: the struct `Cell<T>` is invariant over the parameter `T`
   = help: see <https://doc.rust-lang.org/nomicon/subtyping.html> for more information about variance
   = note: this error originates in the macro `lender::check_covariance_fallible` (in Nightly builds, run with -Z macro-backtrace for more info)
